Styled calendar and add storage for month + year

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "weave build"
   },
   "dependencies": {
-    "weave-io": "0.8.3"
+    "weave-io": "0.8.3",
+    "js-cookie": "2.1.3 "
   }
 }
